Bug 358203 - Global Search list should be wider to fit the names
Summary: Global Search list should be wider to fit the names
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9.10
Platform: Other Linux
: NOR normal
Target Milestone: 2.9.11
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-19 10:01 UTC by Jarosław Staniek
Modified: 2016-03-03 22:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.11
Sentry Crash Report:


Attachments
To narrow list (7.03 KB, image/png)
2016-01-19 10:31 UTC, Jarosław Staniek
Details
Correct width (6.43 KB, image/png)
2016-01-19 10:33 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2016-01-19 10:01:31 UTC
Global Search list should be wider to fit the names. Currently it is as wide  to search box.


Reproducible: Always
Comment 1 Jarosław Staniek 2016-01-19 10:31:35 UTC
Created attachment 96728 [details]
To narrow list
Comment 2 Jarosław Staniek 2016-01-19 10:33:59 UTC
Created attachment 96729 [details]
Correct width
Comment 3 Jarosław Staniek 2016-01-29 21:52:42 UTC
Git commit 3ba81865fc3d5ad723a8596ea20d2f2adfef5fe5 by Jaroslaw Staniek.
Committed on 29/01/2016 at 19:43.
Pushed by staniek into branch 'calligra/2.9'.

Kexi: Global Search list should be wider to fit the names

Summary:
FIXED-IN:2.9.11

Test Plan: Try global search with completion popup for a nontrivial kexi project, see the geometry

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D842

M  +27   -13   kexi/kexiutils/completer/KexiCompleter.cpp
M  +21   -8    kexi/main/KexiSearchLineEdit.cpp

http://commits.kde.org/calligra/3ba81865fc3d5ad723a8596ea20d2f2adfef5fe5
Comment 4 Jarosław Staniek 2016-02-29 23:36:14 UTC
Git commit 8779af0dba828b97ad408b5bb4d2455b8d6622aa by Jaroslaw Staniek.
Committed on 29/02/2016 at 23:07.
Pushed by staniek into branch 'master'.

Make Global Search list wider to fit the names
FIXED-IN:2.9.11

Test Plan: Try global search with completion popup for a nontrivial kexi project, see the geometry

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D842

from calligra.git 3ba81865fc3d5

M  +27   -12   src/kexiutils/completer/KexiCompleter.cpp
M  +21   -8    src/main/KexiSearchLineEdit.cpp

http://commits.kde.org/kexi/8779af0dba828b97ad408b5bb4d2455b8d6622aa