Kexi: Global Search list should be wider to fit the names

Summary:
BUG:358203
FIXED-IN:2.9.11

Test Plan: Try global search with completion popup for a nontrivial kexi project, see the geometry

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D842